tests/ui/hygiene/duplicate_lifetimes.stderr
error[E0403]: the name `'a` is already used for a generic parameter in this item's generic parameters
  --> $DIR/duplicate_lifetimes.rs:8:14
   |
LL |     fn g<$a, 'a>() {}
   |              ^^ already used
...
LL | m!('a);
   | ------
   | |  |
   | |  first use of `'a`
   | in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0403]: the name `'a` is already used for a generic parameter in this item's generic parameters
  --> $DIR/duplicate_lifetimes.rs:13:14
   |
LL |     fn h<$a, 'a>() {}
   |              ^^ already used
...
LL | n!('a);
   | ------
   | |  |
   | |  first use of `'a`
   | in this macro invocation
   |
   = note: this error originates in the macro `n` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0403`.
